fixed sidebar scrollbar

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -78,3 +78,7 @@ gtx-top-bar {
     }
 
 }
+
+gtx-side-menu > .menu > .menu-content {
+    height: 94% !important;
+}
